# sellerlegend_api_py

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PYPI_PUBLISHING.md  README.md  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  requirements.txt  setup.py  setup_test_config.py
examples/: basic_usage.py  cost_management.py  report_download.py  setup_test_config.py  test_token_rotation.py  test_tokens.py
sellerlegend_api/: __init__.py  auth.py  base.py  client.py  exceptions.py  validators.py
sellerlegend_api/resources/: __init__.py  connections.py  costs.py  inventory.py  notifications.py  reports.py  sales.py  supply_chain.py  user.py  warehouse.py
tests/: README.md  conftest.py  test_auth.py  test_resources.py  test_response_handling.py  test_validation.py
tests/fixtures/: responses.py
tests/integration/: __init__.py  config.py  test_auth_integration.py  test_resources_integration.py  test_validation_integration.py
